# recurrence-relations

./: FINAL_project.py  README.md  approximate_polynomial.py  cramers_rule.py  fourth.py  helpers.py  projet.py  pyproject.toml  recurent.py  requirements.txt  requirements_dev.txt  setup.cfg  test_approximate_polynomial.py  test_cramers_rule.py  tox.ini
.github/workflows/: tests.yml
src/recurrence_relations/: FINAL_project.py  approximate_polynomial.py  cramers_rule.py  helpers.py  recurent.py  solve_constant.py  solve_linear.py  solve_log.py
tests/: test_approximate_polynomial.py  test_cramers_rule.py  test_solve_log.py
