[metadata]
name = recurrence_relations
description = A set of tools for working with recurrence relations
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = recurrence_relations
python_requires = >=3.10
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest
    pytest-cov
    hypothesis
    mypy
    flake8
    tox

[pylint]
max-line-length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
